--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Secure password generator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple extension that generates a random password locally, doesn't beam your password over the internet.",
   "permissions": [
     "storage"
   ],
   "browser_action": {
-      "default_title": "xq.ms short URLs",
+      "default_title": "Secure password generator",
       "default_icon": "icon.png",
       "default_popup": "popup.html"
   },
